--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         </div>
         <div class="plan-item">
           <div>Ingeniería Ambiental</div>
-          <div class="plan-actions"><button class="lock" onclick="lockedPlan()">🔒 No disponible</button></div>
+          <div class="plan-actions"><a href="https://xrickbrizz.github.io/Plan-Ing-Ambiental/" target="_blank" rel="noopener">Abrir</a></div>
         </div>
         <div class="plan-item">
           <div>Ingeniería Biomédica</div>
